fix scaling on mobile, add footer centering

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -5,6 +5,7 @@
 }
 
 #content > img {
+	padding-left: 3rem;
 	display:block;
 	width: 15vw;
 }
