--- a/static/css/main_block.css
+++ b/static/css/main_block.css
@@ -6,8 +6,7 @@ footer {
 	background-color: var(--bg2);
 	color: var(--text2);
 	padding-top: 0.5rem;
-	width: 100vw;
-	margin-left: -0.4vw;
+	width: 100%;
 	margin-bottom: -0.6vh;
 }
 
